@@ -9,17 +9,15 @@ import org.spockframework.runtime.Sputnik
 import org.togglz.core.context.FeatureContext
 import org.togglz.junit.TogglzRule
 import org.togglz.testing.TestFeatureManager
-import spock.lang.Requires
 import spock.lang.Specification
 
-import static org.powermock.api.mockito.PowerMockito.*
 import static de.scrum_master.stackoverflow.PocToggle.USE_MY_FEATURE
+import static org.powermock.api.mockito.PowerMockito.mockStatic
+import static org.powermock.api.mockito.PowerMockito.when
 
 /**
  * See https://github.com/powermock/powermock/wiki/JUnit_Delegating_Runner
  */
-// TODO: Configure '--add-opens' and '-Djdk.attach.allowAttachSelf=true' for JDK 16+ in Surefire/Failsafe
-@Requires({ Integer.parseInt(System.getProperty("java.version").replaceAll("[.].*", "")) < 16 })
 @RunWith(PowerMockRunner)
 @PowerMockRunnerDelegate(Sputnik)
 @PrepareForTest([FeatureContext])
