@@ -7,7 +7,6 @@ import org.powermock.core.classloader.annotations.PrepareForTest
 import org.powermock.modules.junit4.PowerMockRunner
 import org.powermock.modules.junit4.PowerMockRunnerDelegate
 import org.spockframework.runtime.Sputnik
-import spock.lang.Requires
 import spock.lang.Specification
 
 import static de.scrum_master.stackoverflow.q55101703.EncryptTest.PowerMockHelper.testUUID_mockStatic
@@ -18,8 +17,6 @@ import static org.powermock.api.mockito.PowerMockito.verifyStatic
 import static org.powermock.api.support.membermodification.MemberMatcher.method
 import static org.powermock.api.support.membermodification.MemberModifier.stub
 
-// TODO: Configure '--add-opens' and '-Djdk.attach.allowAttachSelf=true' for JDK 16+ in Surefire/Failsafe
-@Requires({ Integer.parseInt(System.getProperty("java.version").replaceAll("[.].*", "")) < 16 })
 @RunWith(PowerMockRunner)
 @PowerMockRunnerDelegate(Sputnik)
 @PrepareForTest([Encrypt])
